fixed z-index

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ body {
 
 .yb-slider__left {
   position: relative;
+  z-index: 1;
 }
 
 .yb-slider__header {
@@ -162,6 +163,7 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: 10;
 }
 
 .yb-slider__btn {
